src/objects/blng__RevenueAdjustment__c.object
<CustomObject>
    <description>This object is under development.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountRevenueAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__AdjustmentGroup__c</fullName>
        <label>Adjustment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <inlineHelpText>All revenue for a revenue schedule that is available to be adjusted or distributed.</inlineHelpText>
        <label>Amount</label>
        <summarizedField>blng__RevenueAdjustmentLine__c.blng__AdjustmentAmount__c</summarizedField>
        <summaryForeignKey>blng__RevenueAdjustmentLine__c.blng__RevenueAdjustment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipName>FinanceBookRevenueAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipName>FinancePeriodRevenueAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipName>LegalEntityRevenueAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__RelatedRevenueAdjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Revenue Adjustment</label>
        <referenceTo>blng__RevenueAdjustment__c</referenceTo>
        <relationshipName>Revenue_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAdjustmentDate__c</fullName>
        <label>Revenue Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueAdjustmentStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueAdjustmentType</valueSetName>
        </valueSet>
    </fields>
    <label>Revenue Adjustment</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Revenue Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>